CompileLab2.2/src/Interpreter/compiler.java
/* Generated By:JJTree&JavaCC: Do not edit this line. compiler.java */
package Interpreter;

import java.io.FileNotFoundException;
import java.io.IOException;

public class compiler/*@bgen(jjtree)*/implements compilerTreeConstants, compilerConstants {/*@bgen(jjtree)*/
  protected static JJTcompilerState jjtree = new JJTcompilerState();


  public static void main(String args[]){
    System.out.println("Please type the valid statement...");
    System.out.println(" Using a ! to terminate your input>>");
    new compiler(System.in);
    try {
      SimpleNode n = compiler.Start();
      n.dump("");
      System.out.println("Thank you.");
    }
    catch (Exception e){
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
  }

  public static final String[] Images = {
          "", null, null, null, null, null, null, "IF", "ELSE",
          "READ", "WRITE", "WHILE", "INT",
          "REAL", "BOOL", "INTEGER_LITERAL", "REAL_LITERAL", null, "BOOL_LITERAL", "UNDERSCORE", "COMMA", "SEMI", "COLON",
          "LEFT_PAR", "RIGHT_PAR", "LEFT_BRA", "RIGHT_BRA", "LEFT_CUR", "RIGHT_CUR", "ASSIGN", "PLUS", "MINUS", "TIMES", "DIVIDE",
          "MOD", "LESS:", "GREATER", "EQUAL", "NOTEQUAL", "LESS_EQUAL", "GREATER_EQUAL", "IDENTIFIER", null, null, };

  public final String Lexical() throws FileNotFoundException {
    compilerTokenManager TokenManager = token_source;
    String result = "";
    String errMsg = "";
    String lexical = "";
    String sentence = "";
    int line = 0;

    while(true) {
      Token t;
      while(true) {
        try {
          t = compilerTokenManager.getNextToken();
          break;
        } catch (TokenMgrError e1) {
          errMsg = errMsg + e1.toString() + "\r\n";

          try {
            SimpleCharStream.readChar();
          } catch (IOException e) {
            errMsg = errMsg + e.getMessage() + "\r\n";
          }
        }
      }

      if (line != 0 && line != t.beginLine) {
        sentence = sentence + "\r\n";
        result = result + sentence + lexical;
        line = t.beginLine;
        sentence = "Line:" + line;
        lexical = "";
      } else if (line == 0) {
        line = t.beginLine;
        sentence = "Line:" + line;
      }

      if (t.specialToken != null) {
        Token tmp_t;
        for(tmp_t = t.specialToken; tmp_t.specialToken != null; tmp_t = tmp_t.specialToken) {
          ;
        }

        while(tmp_t != null) {
          result = result + tmp_t.image + "\r\n";
          tmp_t = tmp_t.next;
        }
      }

      sentence = sentence + " " + t.image;
      if (t.kind == 0) {
        sentence = sentence + "\r\n";
        result = result + sentence + lexical;
        return result;
      }


      if(Images[t.kind]==null){
        lexical+="\t(Line:"+t.beginLine+":"+"\t"+t.image+")"+"  ";
      }
      else {
        lexical+="\t(Line:"+t.beginLine+":"+"\t"+Images[t.kind]+"\t"+t.image+")"+"  ";
      }
      lexical+="\r\n";
    }
  }

  public final String Lexicaler() throws FileNotFoundException {
    compilerTokenManager TokenManager = token_source;
    String result = "";
    String errMsg = "";
    String lexical = "";
    String sentence = "";
    int Line = 0;

    while(true) {
      Token t;
      while(true) {
        try {
          t = compilerTokenManager.getNextToken();
          break;
        } catch (TokenMgrError var11) {
          errMsg = errMsg + var11.toString() + "\r\n";

          try {
            SimpleCharStream var10000 = compilerTokenManager.input_stream;
            SimpleCharStream.readChar();
          } catch (IOException var10) {
            errMsg = errMsg + var10.getMessage() + "\r\n";
          }
        }
      }

      if ((Line == 0 || Line == t.beginLine) && t.kind != 0) {
        if (Line == 0) {
          Line = t.beginLine;
          sentence = "Line:" + Line;
        }
      } else {
        sentence = sentence + "\r\n";
        result = result + sentence + lexical;
        Line = t.beginLine;
        sentence = "Line:" + Line;
        lexical = "";
      }

      if (t.specialToken != null) {
        Token tmp_t;
        for(tmp_t = t.specialToken; tmp_t.specialToken != null; tmp_t = tmp_t.specialToken) {
          ;
        }

        while(tmp_t != null) {
          result = result + tmp_t.image + "\r\n";
          tmp_t = tmp_t.next;
        }
      }

      sentence = sentence + " " + t.image;
      if (t.kind == 0) {
        sentence = sentence + "\r\n";
        result = result + sentence + lexical;
        return errMsg;
      }

      if (Images[t.kind] == null) {
        lexical = lexical + "\t(Line:" + t.beginLine + ":" + "\t" + t.image + ")" + "  ";
      } else {
        lexical = lexical + "\t(Line:" + t.beginLine + ":" + "\t" + Images[t.kind] + "\t" + t.image + ")" + "  ";
      }

      lexical = lexical + "\r\n";
    }
  }




  static final public SimpleNode Start() throws ParseException {
                    /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Procedure();
      jj_consume_token(43);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }


  static final public void Procedure() throws ParseException {
                  /*@bgen(jjtree) Procedure */
  SimpleNode jjtn000 = new SimpleNode(JJTPROCEDURE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case READ:
        case WRITE:
        case WHILE:
        case INT:
        case REAL:
        case BOOL:
        case IDENTIFIER:
          Statement();
          break;
        case LEFT_CUR:
          Block();
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case READ:
        case WRITE:
        case WHILE:
        case INT:
        case REAL:
        case BOOL:
        case LEFT_CUR:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Statement() throws ParseException {
                  /*@bgen(jjtree) Statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case REAL:
      case BOOL:
        VarialbeDeclaration();
        break;
      case IDENTIFIER:
        Identifier();
        jj_consume_token(ASSIGN);
        Expression();
        jj_consume_token(SEMI);
        break;
      default:
        jj_la1[6] = jj_gen;
        if (jj_2_1(3)) {
          label_2:
          while (true) {
            jj_consume_token(IF);
            jj_consume_token(LEFT_PAR);
            Condition();
            jj_consume_token(RIGHT_PAR);
            Statement();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ELSE:
              jj_consume_token(ELSE);
              Statement();
              break;
            default:
              jj_la1[2] = jj_gen;
              ;
            }
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IF:
              ;
              break;
            default:
              jj_la1[3] = jj_gen;
              break label_2;
            }
          }
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case READ:
            jj_consume_token(READ);
            jj_consume_token(LEFT_PAR);
            Identifier();
            label_3:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case COMMA:
                ;
                break;
              default:
                jj_la1[4] = jj_gen;
                break label_3;
              }
              jj_consume_token(COMMA);
              Identifier();
            }
            jj_consume_token(RIGHT_PAR);
            jj_consume_token(SEMI);
            break;
          case WRITE:
            jj_consume_token(WRITE);
            jj_consume_token(LEFT_PAR);
            Expression();
            label_4:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case COMMA:
                ;
                break;
              default:
                jj_la1[5] = jj_gen;
                break label_4;
              }
              jj_consume_token(COMMA);
              Identifier();
            }
            jj_consume_token(RIGHT_PAR);
            jj_consume_token(SEMI);
            break;
          case WHILE:
            jj_consume_token(WHILE);
            jj_consume_token(LEFT_PAR);
            Condition();
            jj_consume_token(RIGHT_PAR);
            Statement();
            break;
          default:
            jj_la1[7] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }


  static final public void VarialbeDeclaration() throws ParseException {
                            /*@bgen(jjtree) VarialbeDeclaration */
  SimpleNode jjtn000 = new SimpleNode(JJTVARIALBEDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
        break;
      case REAL:
        jj_consume_token(REAL);
        break;
      case BOOL:
        jj_consume_token(BOOL);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFT_BRA:
        jj_consume_token(LEFT_BRA);
        Expression();
        jj_consume_token(RIGHT_BRA);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      Identifier();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        Identifier();
      }
      jj_consume_token(SEMI);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Block() throws ParseException {
              /*@bgen(jjtree) Block */
  SimpleNode jjtn000 = new SimpleNode(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LEFT_CUR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case READ:
      case WRITE:
      case WHILE:
      case INT:
      case REAL:
      case BOOL:
      case IDENTIFIER:
        Statement();
        break;
      case LEFT_CUR:
        Block();
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RIGHT_CUR);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }


  static final public void Expression() throws ParseException {
                   /*@bgen(jjtree) Expression */
  SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Term();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
          jj_consume_token(PLUS);
          break;
        case MINUS:
          jj_consume_token(MINUS);
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        Term();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }


  static final public void Term() throws ParseException {
             /*@bgen(jjtree) Term */
  SimpleNode jjtn000 = new SimpleNode(JJTTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Factor();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TIMES:
        case DIVIDE:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_7;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TIMES:
          jj_consume_token(TIMES);
          break;
        case DIVIDE:
          jj_consume_token(DIVIDE);
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        Factor();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }


  static final public void Factor() throws ParseException {
               /*@bgen(jjtree) Factor */
  SimpleNode jjtn000 = new SimpleNode(JJTFACTOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        Identifier();
        break;
      case LEFT_PAR:
        jj_consume_token(LEFT_PAR);
        Expression();
        jj_consume_token(RIGHT_PAR);
        break;
      case INTEGER_LITERAL:
        Integer();
        break;
      case REAL_LITERAL:
        Real();
        break;
      case BOOL_LITERAL:
        Bool();
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }


  static final public void Condition() throws ParseException {
                  /*@bgen(jjtree) Condition */
  SimpleNode jjtn000 = new SimpleNode(JJTCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
        jj_consume_token(EQUAL);
        break;
      case NOTEQUAL:
        jj_consume_token(NOTEQUAL);
        break;
      case LESS:
        jj_consume_token(LESS);
        break;
      case GREATER:
        jj_consume_token(GREATER);
        break;
      case LESS_EQUAL:
        jj_consume_token(LESS_EQUAL);
        break;
      case GREATER_EQUAL:
        jj_consume_token(GREATER_EQUAL);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Expression();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }


  static final public void Identifier() throws ParseException {
                   /*@bgen(jjtree) Identifier */
  SimpleNode jjtn000 = new SimpleNode(JJTIDENTIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFT_BRA:
        jj_consume_token(LEFT_BRA);
        Expression();
        jj_consume_token(RIGHT_BRA);
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }


  static final public void Integer() throws ParseException {
                /*@bgen(jjtree) Integer */
  SimpleNode jjtn000 = new SimpleNode(JJTINTEGER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(INTEGER_LITERAL);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }


  static final public void Real() throws ParseException {
             /*@bgen(jjtree) Real */
  SimpleNode jjtn000 = new SimpleNode(JJTREAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(REAL_LITERAL);
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public void Bool() throws ParseException {
              /*@bgen(jjtree) Bool */
  SimpleNode jjtn000 = new SimpleNode(JJTBOOL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BOOL_LITERAL);
    } finally {
       if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_3R_8() {
    if (jj_scan_token(IF)) return true;
    if (jj_scan_token(LEFT_PAR)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(BOOL_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_3R_19()) return true;
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_scan_token(REAL_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(LEFT_PAR)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) return true;
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    Token xsp;
    if (jj_3R_8()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_8()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_3R_11()) return true;
    return false;
  }
